--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -75,6 +75,7 @@
     <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
     <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+    
 
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet">
@@ -146,8 +147,8 @@
                 <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
                     <h3>UI/UX &amp; Graphic Designer</h3>
                     <p class="fst-italic">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                        magna aliqua.
+                        @*Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                        magna aliqua.*@
                     </p>
                     <div class="row">
                         <div class="col-lg-6">
@@ -177,7 +178,17 @@
 
         </div><!-- End About Me -->
         <!-- ======= Counts ======= -->
-        <div class="counts container">
+        <!-- ======= Counts ======= -->
+        <!-- ======= Counts ======= -->
+        <!-- ======= Counts ======= -->
+        <!-- ======= Counts ======= -->
+         <!-- ======= Counts ======= -->
+          <!-- ======= Counts ======= -->
+           <!-- ======= Counts ======= -->
+            <!-- ======= Counts ======= -->
+             <!-- ======= Counts ======= -->
+              <!-- ======= Counts ======= -->
+       @* <div class="counts container">
 
             <div class="row">
 
@@ -215,7 +226,7 @@
 
             </div>
 
-        </div><!-- End Counts -->
+        </div>*@<!-- End Counts -->
         <!-- ======= Skills  ======= -->
         <div class="skills container">
 
@@ -253,21 +264,21 @@
                 <div class="col-lg-6">
 
                     <div class="progress">
-                        <span class="skill">PHP <i class="val">80%</i></span>
+                        <span class="skill">C# <i class="val">90%</i></span>
                         <div class="progress-bar-wrap">
                             <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
 
                     <div class="progress">
-                        <span class="skill">WordPress/CMS <i class="val">90%</i></span>
+                        <span class="skill">Product Design <i class="val">80%</i></span>
                         <div class="progress-bar-wrap">
                             <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
 
                     <div class="progress">
-                        <span class="skill">Photoshop <i class="val">55%</i></span>
+                        <span class="skill">React <i class="val">55%</i></span>
                         <div class="progress-bar-wrap">
                             <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
@@ -282,80 +293,85 @@
         <div class="interests container">
 
             <div class="section-title">
-                <h2>Interests</h2>
+                <h2>Technologies</h2>
             </div>
 
             <div class="row">
                 <div class="col-lg-3 col-md-4">
                     <div class="icon-box">
-                        <i class="ri-store-line" style="color: #ffbb2c;"></i>
-                        <h3>Lorem Ipsum</h3>
+                        @*<i class="fa fa-code" aria-hidden="true"></i>*@
+                        <i class="fa-brands fa-html5" style="color: rgb(30,48,80)"></i>
+                        @*<i class="ri-store-line" style="color: #ffbb2c;"></i>*@
+                        <h3>HTML5</h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
                     <div class="icon-box">
                         <i class="ri-bar-chart-box-line" style="color: #5578ff;"></i>
-                        <h3>Dolor Sitema</h3>
+                        <h3>CSS</h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
                     <div class="icon-box">
                         <i class="ri-calendar-todo-line" style="color: #e80368;"></i>
-                        <h3>Sed perspiciatis</h3>
+                        <h3>ASP.NET</h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
                     <div class="icon-box">
                         <i class="ri-paint-brush-line" style="color: #e361ff;"></i>
-                        <h3>Magni Dolores</h3>
+                        <h3>Java</h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-4">
                     <div class="icon-box">
                         <i class="ri-database-2-line" style="color: #47aeff;"></i>
-                        <h3>Nemo Enim</h3>
+                        <h3>Database</h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-4">
                     <div class="icon-box">
-                        <i class="ri-gradienter-line" style="color: #ffa76e;"></i>
-                        <h3>Eiusmod Tempor</h3>
+                        @*<i class="ri-gradienter-line" style="color: #ffa76e;"></i>*@
+                        <i class="bi bi-microsoft" style="color: blue"></i>
+                        <h3>.NET Framework</h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-4">
                     <div class="icon-box">
-                        <i class="ri-file-list-3-line" style="color: #11dbcf;"></i>
-                        <h3>Midela Teren</h3>
+                        @*<i class="ri-file-list-3-line" style="color: #11dbcf;"></i>*@
+                        <MDBIcon fab icon="react" />
+
+                        <h3>React</h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-4">
                     <div class="icon-box">
                         <i class="ri-price-tag-2-line" style="color: #4233ff;"></i>
-                        <h3>Pira Neve</h3>
+                        <h3>MVC</h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-4">
                     <div class="icon-box">
                         <i class="ri-anchor-line" style="color: #b2904f;"></i>
-                        <h3>Dirada Pack</h3>
+                        <h3>C#</h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-4">
                     <div class="icon-box">
                         <i class="ri-disc-line" style="color: #b20969;"></i>
-                        <h3>Moton Ideal</h3>
+                        <h3>Figma</h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-4">
                     <div class="icon-box">
                         <i class="ri-base-station-line" style="color: #ff5828;"></i>
-                        <h3>Verdo Park</h3>
+                        <h3>Microservices</h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-4">
                     <div class="icon-box">
                         <i class="ri-fingerprint-line" style="color: #29cc61;"></i>
-                        <h3>Flavor Nivelanda</h3>
+                        <h3>Microsoft Visual Studio</h3>
                     </div>
                 </div>
             </div>
