--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -377,7 +377,7 @@
             </div>
 
         </div><!-- End Interests -->
-        <!-- ======= Testimonials ======= -->
+@*        <!-- ======= Testimonials ======= -->
         <div class="testimonials container">
 
             <div class="section-title">
@@ -459,7 +459,7 @@
             <div class="owl-carousel testimonials-carousel">
             </div>
 
-        </div><!-- End Testimonials  -->
+        </div><!-- End Testimonials  -->*@
 
     </section><!-- End About Section -->
     <!-- ======= Resume Section ======= -->
@@ -475,37 +475,38 @@
                 <div class="col-lg-6">
                     <h3 class="resume-title">Sumary</h3>
                     <div class="resume-item pb-0">
-                        <h4>Alice Barkley</h4>
+                        <h4>Iwuchukwu Ikechukwu</h4>
                         <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
                         <p>
                             <ul>
-                                <li>Portland par 127,Orlando, FL</li>
-                                <li>(123) 456-7891</li>
-                                <li>alice.barkley@example.com</li>
+                                <li>Lagos, Nigeria.</li>
+                                <li>+234-815-5402-094</li>
+                                <li>sundayjabikem@gmail.com</li>
                             </ul>
                         </p>
                     </div>
 
                     <h3 class="resume-title">Education</h3>
                     <div class="resume-item">
-                        <h4>Master of Fine Arts &amp; Graphic Design</h4>
-                        <h5>2015 - 2016</h5>
-                        <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-                        <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+                        <h4>Bachelor of Science Electrical/Electronics Education</h4>
+                        <h5>2014 - 2018</h5>
+                        <p><em>University of Lagos, Akoka, Lagos.</em></p>
+                        
                     </div>
                     <div class="resume-item">
-                        <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-                        <h5>2010 - 2014</h5>
-                        <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-                        <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+                        <h4>Java Development</h4>
+                        <h5>March, 2017 - october, 2017</h5>
+                        <p><em>Indian Institute of Hardware Technology (IIHT) Lagos, Nigeria.</em></p>
+                        @*<p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>*@
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <h3 class="resume-title">Professional Experience</h3>
                     <div class="resume-item">
-                        <h4>Senior graphic design specialist</h4>
-                        <h5>2019 - Present</h5>
-                        <p><em>Experion, New York, NY </em></p>
+                        <h4>Keystone Bank Limited</h4>
+                        <h3>Software Developer</h3>
+                        <h5>April, 2023 - Present</h5>
+                        <p><em>Victoria Island, Lagos, Nigeria. </em></p>
                         <p>
                             <ul>
                                 <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
@@ -516,9 +517,10 @@
                         </p>
                     </div>
                     <div class="resume-item">
-                        <h4>Graphic design specialist</h4>
-                        <h5>2017 - 2018</h5>
-                        <p><em>Stepping Stone Advertising, New York, NY</em></p>
+                        <h4>Villextra Technologies</h4>
+                        <h3>.NET Developer</h3>
+                        <h5>January, 2023 - March, 2023</h5>
+                        <p><em>Industrial Avenue Yaba, Lagos Nigeria.</em></p>
                         <p>
                             <ul>
                                 <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
@@ -534,7 +536,7 @@
         </div>
     </section><!-- End Resume Section -->
     <!-- ======= Services Section ======= -->
-    <section id="services" class="services">
+   @* <section id="services" class="services">
         <div class="container">
 
             <div class="section-title">
@@ -593,7 +595,7 @@
 
             </div>
 
-        </div>
+        </div>*@
     </section><!-- End Services Section -->
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio">
@@ -762,7 +764,7 @@
                     <div class="info-box">
                         <i class="bx bx-map"></i>
                         <h3>My Address</h3>
-                        <p>A108 Adam Street, New York, NY 535022</p>
+                        <p>Ikorodu, Lagos State, Nigeria.</p>
                     </div>
                 </div>
 
@@ -784,14 +786,15 @@
                     <div class="info-box">
                         <i class="bx bx-envelope"></i>
                         <h3>Email Me</h3>
-                        <p>contact@example.com</p>
+                        <p>sundayjabikem@gmail.com</p>
                     </div>
                 </div>
                 <div class="col-md-6 mt-4 d-flex align-items-stretch">
                     <div class="info-box">
                         <i class="bx bx-phone-call"></i>
                         <h3>Call Me</h3>
-                        <p>+1 5589 55488 55</p>
+                        <p>+234 8155 4020 94</p>
+                        <p>+234 7037 4641 16</p>
                     </div>
                 </div>
             </div>
