--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@page
 @model IndexModel
+
 @{
     ViewData["Title"] = "Home page";
     Layout = null;
@@ -45,8 +46,7 @@
         <div class="container">
 
             <h1><a href="index.html">Iwuchukwu Ikechukwu</a></h1>
-            <!-- Uncomment below if you prefer to use an image logo -->
-            <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
+            
             <h2>I'm a passionate <span>Software Engineer</span> from Lagos, Nigeria.</h2>
 
             <nav id="navbar" class="navbar">
@@ -54,7 +54,6 @@
                     <li><a class="nav-link active" href="#header">Home</a></li>
                     <li><a class="nav-link" href="#about">About</a></li>
                     <li><a class="nav-link" href="#resume">Resume</a></li>
-                    
                     <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
                     <li><a class="nav-link" href="#contact">Contact</a></li>
                 </ul>
@@ -63,8 +62,8 @@
 
             <div class="social-links">
                 <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-                <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-                @*<a href="#" class="instagram"><i class="bi bi-instagram"></i></a>*@
+                <a href="https://web.facebook.com/Oluwafemi13" target="_blank" class="facebook"><i class="bi bi-facebook"></i></a>
+                
                 <a href="https://www.linkedin.com/in/iwuchukwu/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
 
                 <a href="https://github.com/oluwafemi13" target="_blank" class="linkedin"><i class="bi bi-github"></i></a>
@@ -97,26 +96,24 @@
 
             <div class="row">
                 <div class="col-lg-4" data-aos="fade-right">
-                    <img src="assets/img/me.jpg" class="img-fluid" alt="">
+                    <img src="~/img/MyImage.jpg" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-                    <h3>UI/UX &amp; Graphic Designer</h3>
+                    <h3>UI/UX &amp; Product Designer</h3>
                     <p class="fst-italic">
-                        @*Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                        magna aliqua.*@
+                       
                     </p>
                     <div class="row">
                         <div class="col-lg-6">
                             <ul>
-                                @*<li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>*@
-                                @*<li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>*@
+                               
                                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+234 815 5402 094</span></li>
                                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Lagos, Nigeria.</span></li>
                             </ul>
                         </div>
                         <div class="col-lg-6">
                             <ul>
-                                @*<li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>*@
+                                
                                 <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>B.Sc.</span></li>
                                 <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>sundayjabikem@gmail.com</span></li>
                                 <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
@@ -205,27 +202,26 @@
             <div class="row">
                 <div class="col-lg-3 col-md-4">
                     <div class="icon-box">
-                        @*<i class="fa fa-code" aria-hidden="true"></i>*@
-                        <i class="fa-brands fa-html5" style="color: rgb(30,48,80)"></i>
-                        @*<i class="ri-store-line" style="color: #ffbb2c;"></i>*@
+                       
+                        <i class="ri-html5-line" style="color: #ffbb2c;"></i>
                         <h3>HTML5</h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
                     <div class="icon-box">
-                        <i class="ri-bar-chart-box-line" style="color: #5578ff;"></i>
+                        <i class="ri-css3-fill" style="color: #5578ff;"></i>
                         <h3>CSS</h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
                     <div class="icon-box">
-                        <i class="ri-calendar-todo-line" style="color: #e80368;"></i>
-                        <h3>ASP.NET</h3>
+                      
+                        <h3>ASP.NET Core</h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
                     <div class="icon-box">
-                        <i class="ri-paint-brush-line" style="color: #e361ff;"></i>
+                        <i class="bxs-coffee" style="color: #47aeff;"></i>
                         <h3>Java</h3>
                     </div>
                 </div>
@@ -237,16 +233,14 @@
                 </div>
                 <div class="col-lg-3 col-md-4 mt-4">
                     <div class="icon-box">
-                        @*<i class="ri-gradienter-line" style="color: #ffa76e;"></i>*@
+                        <i class="ri-" style="color: #ffa76e;"></i>
                         <i class="bi bi-microsoft" style="color: blue"></i>
                         <h3>.NET Framework</h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-4">
                     <div class="icon-box">
-                        @*<i class="ri-file-list-3-line" style="color: #11dbcf;"></i>*@
-                        <MDBIcon fab icon="react" />
-
+                        <i class="ri-reactjs-fill" style="color: #11dbcf;"></i>
                         <h3>React</h3>
                     </div>
                 </div>
@@ -258,25 +252,25 @@
                 </div>
                 <div class="col-lg-3 col-md-4 mt-4">
                     <div class="icon-box">
-                        <i class="ri-anchor-line" style="color: #b2904f;"></i>
+                        <i class="" style="color: #b2904f;"></i>
                         <h3>C#</h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-4">
                     <div class="icon-box">
-                        <i class="ri-disc-line" style="color: #b20969;"></i>
+                        <i class="bxl-figma" style="color: #b20969;"></i>
                         <h3>Figma</h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-4">
                     <div class="icon-box">
-                        <i class="ri-base-station-line" style="color: #ff5828;"></i>
+                        <i class="" style="color: #ff5828;"></i>
                         <h3>Microservices</h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-4">
                     <div class="icon-box">
-                        <i class="ri-fingerprint-line" style="color: #29cc61;"></i>
+                        <i class="bxl-visual-studio" style="color: #29cc61;"></i>
                         <h3>Microsoft Visual Studio</h3>
                     </div>
                 </div>
@@ -578,11 +572,7 @@
                 <div class="form-group mt-3">
                     <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
                 </div>
-                <div class="my-3">
-                    <div class="loading">Loading</div>
-                    <div class="error-message"></div>
-                    <div class="sent-message">Your message has been sent. Thank you!</div>
-                </div>
+                
                 <button type="submit" class="text-center">Send Message</button>
             </form>
 
@@ -590,13 +580,7 @@
     </section><!-- End Contact Section -->
 
 
-    <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-    </div>
+    
 
     <!-- Vendor JS Files -->
     <script src="assets/vendor/purecounter/purecounter.js"></script>
